<resources>
    <string name="app_name">StoryApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="gagal">Login Gagal</string>
    <string name="gagal_register">Register Failed</string>
    <string name="error_empty_name">Please Insert your name</string>
    <string name="error_empty_email">Please Insert your email</string>
    <string name="error_empty_password">Please Insert your password</string>
    <string name="error_invalid_email">Email is Invalid</string>
    <string name="settings">Setting</string>
    <string name="label_greeting_user">Halo</string>
    <string name="story_not_found">Story Not Found</string>
    <string name="label_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis nunc nec sodales consectetur. Sed eget auctor quam. Nulla facilisi. Etiam vitae nulla sed arcu varius tempus. Nullam ac diam ante. Donec condimentum cursus accumsan. Ut sit amet felis rutrum, posuere lorem sed</string>
    <string name="title_detail_story">Detail Story</string>
    <string name="message_not_permitted">Permission not granted</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>
    <string name="hint_description">Story Description</string>
    <string name="action_upload_story">Upload Story</string>
    <string name="title_choose_a_picture">Choose a picture</string>
    <string name="title_new_story">Add New Story</string>
    <string name="error_desc_empty">Description can\'t empty</string>
    <string name="title_message">Information</string>
    <string name="message_pick_image">Pick an image</string>
    <string name="message_failed_take_picture">Upload failed</string>
    <string name="action_logout">Logout</string>
    <string name="title_profile">Profile</string>
    <string name="message_logout_confirm">Are you sure want logout ?</string>
    <string name="action_yes">Logout</string>
    <string name="action_cancel">Cancel</string>
    <string name="login_story">Share Your Stories in Bangkit 2022</string>
    <string name="login">Login</string>
    <string name="error_password_more_6">Password must more than 6 character</string>
    <string name="lb_name">Name</string>
    <string name="lb_email">Email</string>
    <string name="lb_password">Password</string>
    <string name="btnRegister">Register</string>
    <string name="havent_account">Do\'nt Have Account ?</string>
    <string name="register">Register</string>
    <string name="story_register">Register and Share your Stories</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">retry</string>
</resources>