<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">


    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Story App"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/red_2"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labeel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_story"
        app:layout_constraintTop_toBottomOf="@id/label"
        app:layout_constraintStart_toStartOf="@id/label"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/lb_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/lb_email"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/labeel"
        app:layout_constraintStart_toStartOf="@id/labeel"
        />


    <com.example.storyapp.ui.customView.emailEdtText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_edit_text"
        android:translationZ="0dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="@id/lb_email"
        app:layout_constraintTop_toBottomOf="@id/lb_email"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/lb_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/lb_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="@id/lb_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/lb_password"
        app:layout_constraintTop_toBottomOf="@id/lb_password"
        app:endIconMode="password_toggle">

        <com.example.storyapp.ui.customView.passwordEdtText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:inputType="textPassword"
            android:background="@drawable/bg_edit_text"
            android:translationZ="0dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="@id/lb_password"
            app:layout_constraintTop_toBottomOf="@id/lb_password"
            tools:layout_editor_absoluteX="16dp" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lb_password"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintEnd_toEndOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/login">

            <TextView
                android:id="@+id/labelDaftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/havent_account"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/toDaftar"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintStart_toEndOf="@id/labelDaftar"
                app:layout_constraintTop_toBottomOf="@id/login" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/textError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:colorPrimary"
        android:visibility="invisible"
        android:text="@string/gagal"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>