<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">


    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/red_2"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/story_register"
        app:layout_constraintTop_toBottomOf="@id/label"
        app:layout_constraintStart_toStartOf="@id/label"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/lb_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lb_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/label_regis"
        app:layout_constraintStart_toStartOf="@id/label_regis"
        />


        <com.example.storyapp.ui.customView.defaultEdtText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:background="@drawable/bg_edit_text"
            android:inputType="textEmailAddress"
            android:translationZ="0dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginHorizontal="20dp"
            android:paddingTop="10dp"
            tools:layout_editor_absoluteX="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lb_name"
            />

        <TextView
            android:id="@+id/lb_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/lb_email"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/edtName"
            app:layout_constraintStart_toStartOf="@id/edtName"
            />


        <com.example.storyapp.ui.customView.emailEdtText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_edit_text"
            android:translationZ="0dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="@id/lb_email"
            app:layout_constraintTop_toBottomOf="@id/lb_email"
            tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/lb_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/lb_password"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintStart_toStartOf="@id/edtName"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/lb_password"
        app:layout_constraintTop_toBottomOf="@id/lb_password"
        app:endIconMode="password_toggle">

        <com.example.storyapp.ui.customView.passwordEdtText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:inputType="textPassword"
            android:background="@drawable/bg_edit_text"
            android:translationZ="0dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="@id/lb_password"
            app:layout_constraintTop_toBottomOf="@id/lb_password"
            tools:layout_editor_absoluteX="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegister"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lb_password"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/gagal_register"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>